--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 09:05:04 2018</p>
+         Last Run: Fri Jul 20 10:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -60,7 +60,7 @@
                         <td>0</td>
                         <td>30</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SW</td>
                         <td>3</td>
                      </tr>
@@ -73,7 +73,7 @@
                         <td>27</td>
                         <td>7</td>
                         <td>11</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>38</td>
                      </tr>
                      <tr>
@@ -86,7 +86,7 @@
                         <td>6</td>
                         <td>14</td>
                         <td>WSW</td>
-                        <td>50</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -230,7 +230,7 @@
                  "1",
                  "3",
                  "38",
-                 "50"
+                 "52"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 09:05:04 2018</p>
+         Last Run: Fri Jul 20 10:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -276,7 +276,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>30</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -288,7 +288,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>18</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -296,7 +296,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>2</td>
-                        <td>46</td>
+                        <td>45</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NE</td>
@@ -420,7 +420,7 @@
                "data":[
                  "35",
                  "38",
-                 "46"
+                 "45"
                ]
              },
              {
@@ -428,8 +428,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "30",
-                 "18",
+                 "31",
+                 "19",
                  "11"
                ]
              }
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 09:05:04 2018</p>
+         Last Run: Fri Jul 20 10:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -476,14 +476,14 @@
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>57</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>36</td>
                         <td>1</td>
                         <td>13</td>
@@ -508,7 +508,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>24</td>
-                        <td>48</td>
+                        <td>47</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
@@ -516,10 +516,10 @@
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of Rain</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>24</td>
+                        <td>31</td>
                         <td>56</td>
                         <td>0</td>
                         <td>8</td>
@@ -641,10 +641,10 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "10",
-                 "10",
+                 "11",
                  "11",
                  "24",
-                 "24"
+                 "31"
                ]
              },
              {
@@ -655,7 +655,7 @@
                  "33",
                  "36",
                  "40",
-                 "48",
+                 "47",
                  "56"
                ]
              },
@@ -664,7 +664,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
+                 "58",
                  "59",
                  "60",
                  "61",
