--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 10:05:03 2018</p>
+         Last Run: Fri Jul 20 11:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 10:05:03 2018</p>
+         Last Run: Fri Jul 20 11:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -276,7 +276,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>31</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -288,7 +288,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>19</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -296,11 +296,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>2</td>
-                        <td>45</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NE</td>
-                        <td>11</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -420,7 +420,7 @@
                "data":[
                  "35",
                  "38",
-                 "45"
+                 "46"
                ]
              },
              {
@@ -428,9 +428,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "31",
-                 "19",
-                 "11"
+                 "30",
+                 "18",
+                 "10"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 10:05:03 2018</p>
+         Last Run: Fri Jul 20 11:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -471,19 +471,19 @@
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>10</td>
+                        <td>9</td>
                         <td>33</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>58</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>36</td>
                         <td>1</td>
                         <td>13</td>
@@ -495,7 +495,7 @@
                         <td>Mostly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>40</td>
                         <td>0</td>
                         <td>13</td>
@@ -508,7 +508,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>24</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
@@ -516,14 +516,14 @@
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>31</td>
+                        <td>Mostly Cloudy</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>24</td>
                         <td>56</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>E</td>
+                        <td>ENE</td>
                         <td>61</td>
                      </tr>
                   </tbody>
@@ -574,7 +574,7 @@
                  "23",
                  "22",
                  "20",
-                 "17"
+                 "18"
                ]
              },
              {
@@ -587,7 +587,7 @@
                  "23",
                  "22",
                  "20",
-                 "17"
+                 "18"
                ]
              }
            ]
@@ -640,11 +640,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "9",
                  "10",
-                 "11",
-                 "11",
+                 "10",
                  "24",
-                 "31"
+                 "24"
                ]
              },
              {
@@ -655,7 +655,7 @@
                  "33",
                  "36",
                  "40",
-                 "47",
+                 "48",
                  "56"
                ]
              },
@@ -664,7 +664,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
+                 "56",
                  "59",
                  "60",
                  "61",
