--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 11:05:09 2018</p>
+         Last Run: Fri Jul 20 12:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -60,7 +60,7 @@
                         <td>0</td>
                         <td>30</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SW</td>
                         <td>3</td>
                      </tr>
@@ -71,22 +71,22 @@
                         <td>21</td>
                         <td>15</td>
                         <td>27</td>
-                        <td>7</td>
+                        <td>6</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>38</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
                         <td>15</td>
                         <td>24</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>14</td>
                         <td>WSW</td>
-                        <td>52</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -229,8 +229,8 @@
                  "0",
                  "1",
                  "3",
-                 "38",
-                 "52"
+                 "54",
+                 "66"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 11:05:09 2018</p>
+         Last Run: Fri Jul 20 12:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -268,7 +268,7 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
@@ -276,31 +276,31 @@
                         <td>1</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>30</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>0</td>
+                        <td>15</td>
                         <td>38</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>18</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>2</td>
+                        <td>12</td>
                         <td>46</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NE</td>
-                        <td>10</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -409,8 +409,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
-                 "2"
+                 "15",
+                 "12"
                ]
              },
              {
@@ -428,9 +428,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "30",
-                 "18",
-                 "10"
+                 "29",
+                 "16",
+                 "9"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 11:05:09 2018</p>
+         Last Run: Fri Jul 20 12:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -471,7 +471,7 @@
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>9</td>
+                        <td>13</td>
                         <td>33</td>
                         <td>2</td>
                         <td>13</td>
@@ -483,19 +483,19 @@
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>10</td>
+                        <td>15</td>
                         <td>36</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>59</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>10</td>
+                        <td>17</td>
                         <td>40</td>
                         <td>0</td>
                         <td>13</td>
@@ -507,7 +507,7 @@
                         <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>24</td>
+                        <td>12</td>
                         <td>48</td>
                         <td>0</td>
                         <td>11</td>
@@ -517,13 +517,13 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>18</td>
-                        <td>18</td>
-                        <td>24</td>
-                        <td>56</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>14</td>
+                        <td>57</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>ENE</td>
+                        <td>10</td>
+                        <td>E</td>
                         <td>61</td>
                      </tr>
                   </tbody>
@@ -574,7 +574,7 @@
                  "23",
                  "22",
                  "20",
-                 "18"
+                 "17"
                ]
              },
              {
@@ -587,7 +587,7 @@
                  "23",
                  "22",
                  "20",
-                 "18"
+                 "17"
                ]
              }
            ]
@@ -640,11 +640,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "9",
-                 "10",
-                 "10",
-                 "24",
-                 "24"
+                 "13",
+                 "15",
+                 "17",
+                 "12",
+                 "14"
                ]
              },
              {
@@ -656,7 +656,7 @@
                  "36",
                  "40",
                  "48",
-                 "56"
+                 "57"
                ]
              },
              {
@@ -665,7 +665,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "56",
-                 "59",
+                 "58",
                  "60",
                  "61",
                  "61"
