--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 12:05:04 2018</p>
+         Last Run: Fri Jul 20 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -60,7 +60,7 @@
                         <td>0</td>
                         <td>30</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SW</td>
                         <td>3</td>
                      </tr>
@@ -70,9 +70,9 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>WSW</td>
                         <td>54</td>
                      </tr>
@@ -82,11 +82,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>15</td>
-                        <td>24</td>
+                        <td>25</td>
                         <td>5</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>WSW</td>
-                        <td>66</td>
+                        <td>71</td>
                      </tr>
                   </tbody>
                </table>
@@ -217,8 +217,8 @@
                  "45",
                  "37",
                  "30",
-                 "27",
-                 "24"
+                 "26",
+                 "25"
                ]
              },
              {
@@ -230,7 +230,7 @@
                  "1",
                  "3",
                  "54",
-                 "66"
+                 "71"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 12:05:04 2018</p>
+         Last Run: Fri Jul 20 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -272,11 +272,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>34</td>
                         <td>1</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>29</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -295,12 +295,12 @@
                         <td>Clear</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>12</td>
+                        <td>11</td>
                         <td>46</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NE</td>
-                        <td>9</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -410,7 +410,7 @@
                "data":[
                  "0",
                  "15",
-                 "12"
+                 "11"
                ]
              },
              {
@@ -418,7 +418,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
+                 "34",
                  "38",
                  "46"
                ]
@@ -428,9 +428,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
+                 "28",
                  "16",
-                 "9"
+                 "8"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 12:05:04 2018</p>
+         Last Run: Fri Jul 20 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -471,31 +471,31 @@
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>13</td>
+                        <td>6</td>
                         <td>33</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SE</td>
-                        <td>56</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>15</td>
+                        <td>8</td>
                         <td>36</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>58</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>17</td>
+                        <td>9</td>
                         <td>40</td>
                         <td>0</td>
                         <td>13</td>
@@ -505,13 +505,13 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>12</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>7</td>
                         <td>48</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>E</td>
+                        <td>ESE</td>
                         <td>61</td>
                      </tr>
                      <tr>
@@ -519,11 +519,11 @@
                         <td>Mostly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>14</td>
-                        <td>57</td>
+                        <td>9</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>E</td>
+                        <td>ESE</td>
                         <td>61</td>
                      </tr>
                   </tbody>
@@ -573,7 +573,7 @@
                  "24",
                  "23",
                  "22",
-                 "20",
+                 "19",
                  "17"
                ]
              },
@@ -586,7 +586,7 @@
                  "24",
                  "23",
                  "22",
-                 "20",
+                 "19",
                  "17"
                ]
              }
@@ -640,11 +640,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "13",
-                 "15",
-                 "17",
-                 "12",
-                 "14"
+                 "6",
+                 "8",
+                 "9",
+                 "7",
+                 "9"
                ]
              },
              {
@@ -656,7 +656,7 @@
                  "36",
                  "40",
                  "48",
-                 "57"
+                 "58"
                ]
              },
              {
@@ -664,8 +664,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
-                 "58",
+                 "55",
+                 "57",
                  "60",
                  "61",
                  "61"
